<resources>
    <string name="app_name">VRDDHII</string>
    <string name="label_inventory">Tag Inventory</string>
    <string name="parameter_settings">Parameter Settings</string>
    <string name="read_and_write_tags">Tag Read AND Write</string>
    <string name="uf3_s">UF3-S</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="single_card">One-time Tag Search</string>
    <string name="search_for_card">Continuous Tag Search</string>
    <string name="stop_search_for_card">Stop</string>
    <string name="clear">Clear</string>
    <string name="tag_number">Number</string>
    <string name="recognize_times">" Number of recognitions"</string>
    <string name="inventory_time">Inventory Time(ms)</string>
    <string name="serial_number">SN</string>
    <string name="epc">EPC</string>
    <string name="tid">TID</string>
    <string name="user">USER</string>
    <string name="password">PASSWORD</string>
    <string name="times">Times</string>
    <string name="rssi">RSSI</string>
    <string name="reader_antenna">Antenna</string>
    <string name="output_power">Output Power</string>
    <string name="dbm">dBm</string>
    <string name="work_frequency_band">Frequency</string>
    <string name="work_agreement">Agreement</string>
    <string name="antenna_configuaration">Antenna</string>
    <string name="antenna_testing">Antenna Testing</string>
    <string name="ant1">ANT1</string>
    <string name="ant2">ANT2</string>
    <string name="ant3">ANT3</string>
    <string name="ant4">ANT4</string>
    <string name="ant5">ANT5</string>
    <string name="ant6">ANT6</string>
    <string name="ant7">ANT7</string>
    <string name="ant8">ANT8</string>
    <string name="gpio_in">IN</string>
    <string name="gpio_out">OUT</string>
    <string name="in1">IN1</string>
    <string name="in2">IN2</string>
    <string name="in3">IN3</string>
    <string name="in4">IN4</string>
    <string name="out1">OUT1</string>
    <string name="out2">OUT2</string>
    <string name="out3">OUT3</string>
    <string name="out4">OUT4</string>
    <string name="session">Session</string>
    <string name="profile">Profile</string>
    <string name="target">Target</string>
    <string name="q_value">Q</string>
    <string name="enable_additional_data">Enable Additional Data</string>
    <string name="storage_area">Storage Area</string>
    <string name="start_address">start_address</string>
    <string name="blocks">Blocks</string>
    <string name="visit_password">Password</string>
    <string name="temperature">Temperature</string>
    <string name="buzzer">Buzzer</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="reader_address">Address</string>
    <string name="reader_port">Port</string>
    <string name="mask">Mask</string>
    <string name="mac_address">Mac</string>
    <string name="paramer_set">SET</string>
    <string name="paramer_get">GET</string>
    <string name="factory_set">RESET</string>
    <string name="additional_data">Additional Data</string>
    <string name="select_storage_area">Select Storage Area</string>
    <string name="select_anntas">Select Antennas</string>
    <string name="filter">Filter</string>
    <string name="read_writer">Read AND Write</string>
    <string name="lock">Lock</string>
    <string name="destory_password">Password</string>
    <string name="destory">Destroy</string>
    <string name="data">Data</string>
    <string name="data_content">Content</string>
    <string name="suit">Suit</string>
    <string name="setting">Setting</string>
    <string name="read_card">Read</string>
    <string name="write_card">Write</string>
    <string name="remove">Remove</string>
    <string name="lock_type">Type</string>
    <string name="lock_tag">Lock</string>
    <string name="destroy_tag">Destroy</string>
    <string name="enable">Enable</string>
    <string name="length">Length</string>
    <string name="start_address_byte">Start Address(byte)</string>
    <string name="start_address_word">Start Address(word)</string>
    <string name="length_word">Length(word)</string>
    <string name="length_byte">Length(even byte)</string>
    <string name="confirm_factory_settings">Do you want to confirm factory settings?</string>
    <string name="start_address_is_empty">Start address is empty</string>
    <string name="password_is_empty">Access password is empty</string>
    <string name="destroy_password_is_empty">Destroy password is empty</string>
    <string name="please_select_the_label">Please select a label</string>
    <string name="length_is_empty">length is empty</string>
    <string name="data_content_is_empty">data content is empty</string>
    <string name="data_length_is_inconsistent_with_the_setting">The data length is inconsistent with the setting</string>
    <string name="lock_hint">Once permanently locked, it cannot be unlocked and data cannot be written!</string>
    <string name="destroy_hint">" Destruction of the label will make the label permanently invalid and cannot be recovered, please use it with caution"</string>
    <string name="sure">" Sure"</string>
    <string name="cancel">Cancel</string>
    <string name="read_card_success">Card read successfully</string>
    <string name="write_card_success">write card successfully</string>
    <string name="read_card_failed">Card reading failed</string>
    <string name="write_card_failed">write card failed</string>
    <string name="set_success">" set successfully"</string>
    <string name="set_failed">Setup failed</string>
    <string name="get_setting_success">Get parameters successfully</string>
    <string name="get_setting_failed">Failed to get parameter</string>
    <string name="unlock_success">Unlocked successfully</string>
    <string name="temp_lock_success">" Temporarily locked successfully"</string>
    <string name="foreveer_lock_success">" Permanently locked successfully"</string>
    <string name="destry_success">Destroyed successfully</string>
    <string name="destry_failed">Destruction failed</string>
    <string name="err_infomation">error message</string>
    <string name="please_select_antenna">" Please select an antenna"</string>
    <string name="please_fill_additional_data_start_address">" Please fill in the starting address of the additional data area"</string>
    <string name="please_fill_additional_data_password">Please fill in the additional data area access password</string>
    <string name="please_fill_additional_data_length">" Please fill in the length of the additional data area"</string>
    <string name="please_stop_searching">Please stop looking for cards</string>

    <string name="default_etStartAddress" translatable="false">0</string>
    <string name="default_etLength" translatable="false">12</string>
    <string name="default_etVisitPassword" translatable="false">00000000</string>

    <string name="auto" >Auto</string>
    <string name="press_back_again" >Press back again to exit</string>

    <string name="yes">Set</string>
    <string name="no">Cencel</string>

</resources>