<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal"
        android:gravity="center">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/vrddhii_1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-50dp"
        android:orientation="horizontal"
        android:gravity="right">

        <RelativeLayout
            android:id="@+id/ll_label_inventory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:visibility="invisible">

            <TextView
                style="@style/normal_btn"
                android:layout_centerInParent="true"
                android:text="@string/label_inventory" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_parameter_set"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_main"
            android:padding="15dp"
            android:visibility="invisible">

            <TextView
                style="@style/normal_btn"
                android:layout_centerInParent="true"
                android:text="@string/parameter_settings" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_epc_write_read"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_main"
            android:padding="15dp"
            android:visibility="invisible">

            <TextView
                style="@style/normal_btn"
                android:layout_centerInParent="true"
                android:text="@string/read_and_write_tags" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_main"
            android:id="@+id/ll_branch_id"
            android:padding="15dp">

            <TextView
                style="@style/normal_btn"
                android:layout_centerInParent="true"
                android:id="@+id/branch_id"
                android:text="Branch Id" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_main"
            android:id="@+id/ll_set_branch_id"
            android:padding="15dp">


            <TextView
                style="@style/normal_btn"
                android:layout_centerInParent="true"
                android:id="@+id/set_branch_id"
                android:text="Set Branch Id" />
        </RelativeLayout>


    </LinearLayout>

    <FrameLayout

        android:id="@+id/rl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>